--- a/templates/home.html
+++ b/templates/home.html
@@ -82,7 +82,11 @@
                 {% endfor %}
                 </tbody>                
             </table>
-           
+            <div class='footer'>
+                <a href="https://github.com/Lucif3r1101/YT-Downloader"><i class="fab fa-github" style='font-size:30px'></i></a>
+                <br></br>
+                <p>Copyright © 2021 Rishav Raj(Download whatever video you want)</p>
+            </div>
 
             
 
