--- a/templates/base.html
+++ b/templates/base.html
@@ -7,6 +7,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="{% static 'css/main.css' %}">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.6.1/css/all.css">
+
     <title>YTVDownloader</title>
 </head>
 <body>
@@ -21,13 +24,7 @@
 <script src="{% static 'js/popper.js' %}"></script>
 <script src="{% static 'js/main.js' %}"></script>
 
-<table class = "table mt-5 mb-5">
-    <thead class="thead-light">
-        <div class="footer">
-            <p>Footer</p>
-        </div>
-    </thead>
-</table>
+
 
 </body>
 </html>
